parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> funclist
Rule 3     program -> epsilon
Rule 4     funclist -> funcdef funclist2
Rule 5     funclist2 -> funclist
Rule 6     funclist2 -> epsilon
Rule 7     funcdef -> DEF IDENT LPAREN paramlist RPAREN LCHAVES statelist RCHAVES
Rule 8     paramlist -> INT IDENT paramlist2
Rule 9     paramlist -> FLOAT IDENT paramlist2
Rule 10    paramlist -> STRING IDENT paramlist2
Rule 11    paramlist -> epsilon
Rule 12    paramlist2 -> VIRGULA paramlist
Rule 13    paramlist2 -> epsilon
Rule 14    statement -> vardecl PONTO_VIRGULA
Rule 15    statement -> atribstat PONTO_VIRGULA
Rule 16    statement -> printstat PONTO_VIRGULA
Rule 17    statement -> readstat PONTO_VIRGULA
Rule 18    statement -> returnstat PONTO_VIRGULA
Rule 19    statement -> ifstat
Rule 20    statement -> forstat
Rule 21    statement -> LCHAVES statelist RCHAVES
Rule 22    statement -> BREAK PONTO_VIRGULA
Rule 23    statement -> PONTO_VIRGULA
Rule 24    vardecl -> INT IDENT a
Rule 25    vardecl -> FLOAT IDENT a
Rule 26    vardecl -> STRING IDENT a
Rule 27    a -> LCOLCHETES INT_CONSTANT RCOLCHETES a
Rule 28    a -> epsilon
Rule 29    atribstat -> lvalue ATRIBUICAO atribstat2
Rule 30    atribstat2 -> expression
Rule 31    atribstat2 -> allocexpression
Rule 32    atribstat2 -> funccall
Rule 33    funccall -> CALL IDENT LPAREN paramlistcall RPAREN
Rule 34    paramlistcall -> IDENT paramlistcall2
Rule 35    paramlistcall -> epsilon
Rule 36    paramlistcall2 -> VIRGULA paramlistcall
Rule 37    paramlistcall2 -> epsilon
Rule 38    printstat -> PRINT expression
Rule 39    readstat -> READ lvalue
Rule 40    returnstat -> RETURN
Rule 41    ifstat -> IF LPAREN expression RPAREN statement ifstat2
Rule 42    ifstat2 -> ELSE statement PONTO_VIRGULA
Rule 43    ifstat2 -> PONTO_VIRGULA
Rule 44    forstat -> FOR LPAREN atribstat PONTO_VIRGULA expression PONTO_VIRGULA atribstat RPAREN statement
Rule 45    statelist -> statement statelist2
Rule 46    statelist2 -> statelist
Rule 47    statelist2 -> epsilon
Rule 48    allocexpression -> NEW allocexpression2
Rule 49    allocexpression2 -> INT e
Rule 50    allocexpression2 -> FLOAT e
Rule 51    allocexpression2 -> STRING e
Rule 52    e -> LCOLCHETES numexpression RCOLCHETES e2
Rule 53    e2 -> e
Rule 54    e2 -> epsilon
Rule 55    expression -> numexpression expression2
Rule 56    expression2 -> MENOR numexpression
Rule 57    expression2 -> MAIOR numexpression
Rule 58    expression2 -> MENORIGUAL numexpression
Rule 59    expression2 -> MAIORIGUAL numexpression
Rule 60    expression2 -> IGUAL numexpression
Rule 61    expression2 -> DIFERENTE numexpression
Rule 62    expression2 -> epsilon
Rule 63    numexpression -> term d
Rule 64    d -> SOMA term d
Rule 65    d -> SUBTRACAO term d
Rule 66    d -> epsilon
Rule 67    term -> unaryexpr b
Rule 68    b -> MULTIPLICACAO unaryexpr b
Rule 69    b -> DIVISAO unaryexpr b
Rule 70    b -> RESTO unaryexpr b
Rule 71    b -> epsilon
Rule 72    unaryexpr -> SOMA factor
Rule 73    unaryexpr -> SUBTRACAO factor
Rule 74    unaryexpr -> factor
Rule 75    factor -> INT_CONSTANT
Rule 76    factor -> FLOAT_CONSTANT
Rule 77    factor -> STRING_CONSTANT
Rule 78    factor -> NULL
Rule 79    factor -> lvalue
Rule 80    factor -> LPAREN numexpression RPAREN
Rule 81    lvalue -> IDENT c
Rule 82    c -> LCOLCHETES numexpression RCOLCHETES c
Rule 83    c -> epsilon
Rule 84    epsilon -> <empty>

Terminals, with rules where they appear

ATRIBUICAO           : 29
BREAK                : 22
CALL                 : 33
DEF                  : 7
DIFERENTE            : 61
DIVISAO              : 69
ELSE                 : 42
FLOAT                : 9 25 50
FLOAT_CONSTANT       : 76
FOR                  : 44
IDENT                : 7 8 9 10 24 25 26 33 34 81
IF                   : 41
IGUAL                : 60
INT                  : 8 24 49
INT_CONSTANT         : 27 75
LCHAVES              : 7 21
LCOLCHETES           : 27 52 82
LPAREN               : 7 33 41 44 80
MAIOR                : 57
MAIORIGUAL           : 59
MENOR                : 56
MENORIGUAL           : 58
MULTIPLICACAO        : 68
NEW                  : 48
NULL                 : 78
PONTO_VIRGULA        : 14 15 16 17 18 22 23 42 43 44 44
PRINT                : 38
RCHAVES              : 7 21
RCOLCHETES           : 27 52 82
READ                 : 39
RESTO                : 70
RETURN               : 40
RPAREN               : 7 33 41 44 80
SOMA                 : 64 72
STRING               : 10 26 51
STRING_CONSTANT      : 77
SUBTRACAO            : 65 73
VIRGULA              : 12 36
error                : 

Nonterminals, with rules where they appear

a                    : 24 25 26 27
allocexpression      : 31
allocexpression2     : 48
atribstat            : 15 44 44
atribstat2           : 29
b                    : 67 68 69 70
c                    : 81 82
d                    : 63 64 65
e                    : 49 50 51 53
e2                   : 52
epsilon              : 3 6 11 13 28 35 37 47 54 62 66 71 83
expression           : 30 38 41 44
expression2          : 55
factor               : 72 73 74
forstat              : 20
funccall             : 32
funcdef              : 4
funclist             : 2 5
funclist2            : 4
ifstat               : 19
ifstat2              : 41
lvalue               : 29 39 79
numexpression        : 52 55 56 57 58 59 60 61 80 82
paramlist            : 7 12
paramlist2           : 8 9 10
paramlistcall        : 33 36
paramlistcall2       : 34
printstat            : 16
program              : 0
readstat             : 17
returnstat           : 18
statelist            : 7 21 46
statelist2           : 45
statement            : 1 41 42 44 45
term                 : 63 64 65
unaryexpr            : 67 68 69 70
vardecl              : 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . funclist
    (3) program -> . epsilon
    (14) statement -> . vardecl PONTO_VIRGULA
    (15) statement -> . atribstat PONTO_VIRGULA
    (16) statement -> . printstat PONTO_VIRGULA
    (17) statement -> . readstat PONTO_VIRGULA
    (18) statement -> . returnstat PONTO_VIRGULA
    (19) statement -> . ifstat
    (20) statement -> . forstat
    (21) statement -> . LCHAVES statelist RCHAVES
    (22) statement -> . BREAK PONTO_VIRGULA
    (23) statement -> . PONTO_VIRGULA
    (4) funclist -> . funcdef funclist2
    (84) epsilon -> .
    (24) vardecl -> . INT IDENT a
    (25) vardecl -> . FLOAT IDENT a
    (26) vardecl -> . STRING IDENT a
    (29) atribstat -> . lvalue ATRIBUICAO atribstat2
    (38) printstat -> . PRINT expression
    (39) readstat -> . READ lvalue
    (40) returnstat -> . RETURN
    (41) ifstat -> . IF LPAREN expression RPAREN statement ifstat2
    (44) forstat -> . FOR LPAREN atribstat PONTO_VIRGULA expression PONTO_VIRGULA atribstat RPAREN statement
    (7) funcdef -> . DEF IDENT LPAREN paramlist RPAREN LCHAVES statelist RCHAVES
    (81) lvalue -> . IDENT c

    LCHAVES         shift and go to state 13
    BREAK           shift and go to state 14
    PONTO_VIRGULA   shift and go to state 6
    $end            reduce using rule 84 (epsilon -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    PRINT           shift and go to state 21
    READ            shift and go to state 22
    RETURN          shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    DEF             shift and go to state 26
    IDENT           shift and go to state 17

    program                        shift and go to state 1
    statement                      shift and go to state 2
    funclist                       shift and go to state 3
    epsilon                        shift and go to state 4
    vardecl                        shift and go to state 5
    atribstat                      shift and go to state 7
    printstat                      shift and go to state 8
    readstat                       shift and go to state 9
    returnstat                     shift and go to state 10
    ifstat                         shift and go to state 11
    forstat                        shift and go to state 12
    funcdef                        shift and go to state 15
    lvalue                         shift and go to state 20

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .

    $end            reduce using rule 1 (program -> statement .)


state 3

    (2) program -> funclist .

    $end            reduce using rule 2 (program -> funclist .)


state 4

    (3) program -> epsilon .

    $end            reduce using rule 3 (program -> epsilon .)


state 5

    (14) statement -> vardecl . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 27


state 6

    (23) statement -> PONTO_VIRGULA .

    $end            reduce using rule 23 (statement -> PONTO_VIRGULA .)
    LCHAVES         reduce using rule 23 (statement -> PONTO_VIRGULA .)
    BREAK           reduce using rule 23 (statement -> PONTO_VIRGULA .)
    PONTO_VIRGULA   reduce using rule 23 (statement -> PONTO_VIRGULA .)
    INT             reduce using rule 23 (statement -> PONTO_VIRGULA .)
    FLOAT           reduce using rule 23 (statement -> PONTO_VIRGULA .)
    STRING          reduce using rule 23 (statement -> PONTO_VIRGULA .)
    PRINT           reduce using rule 23 (statement -> PONTO_VIRGULA .)
    READ            reduce using rule 23 (statement -> PONTO_VIRGULA .)
    RETURN          reduce using rule 23 (statement -> PONTO_VIRGULA .)
    IF              reduce using rule 23 (statement -> PONTO_VIRGULA .)
    FOR             reduce using rule 23 (statement -> PONTO_VIRGULA .)
    IDENT           reduce using rule 23 (statement -> PONTO_VIRGULA .)
    RCHAVES         reduce using rule 23 (statement -> PONTO_VIRGULA .)
    ELSE            reduce using rule 23 (statement -> PONTO_VIRGULA .)


state 7

    (15) statement -> atribstat . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 28


state 8

    (16) statement -> printstat . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 29


state 9

    (17) statement -> readstat . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 30


state 10

    (18) statement -> returnstat . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 31


state 11

    (19) statement -> ifstat .

    $end            reduce using rule 19 (statement -> ifstat .)
    LCHAVES         reduce using rule 19 (statement -> ifstat .)
    BREAK           reduce using rule 19 (statement -> ifstat .)
    PONTO_VIRGULA   reduce using rule 19 (statement -> ifstat .)
    INT             reduce using rule 19 (statement -> ifstat .)
    FLOAT           reduce using rule 19 (statement -> ifstat .)
    STRING          reduce using rule 19 (statement -> ifstat .)
    PRINT           reduce using rule 19 (statement -> ifstat .)
    READ            reduce using rule 19 (statement -> ifstat .)
    RETURN          reduce using rule 19 (statement -> ifstat .)
    IF              reduce using rule 19 (statement -> ifstat .)
    FOR             reduce using rule 19 (statement -> ifstat .)
    IDENT           reduce using rule 19 (statement -> ifstat .)
    RCHAVES         reduce using rule 19 (statement -> ifstat .)
    ELSE            reduce using rule 19 (statement -> ifstat .)


state 12

    (20) statement -> forstat .

    $end            reduce using rule 20 (statement -> forstat .)
    LCHAVES         reduce using rule 20 (statement -> forstat .)
    BREAK           reduce using rule 20 (statement -> forstat .)
    PONTO_VIRGULA   reduce using rule 20 (statement -> forstat .)
    INT             reduce using rule 20 (statement -> forstat .)
    FLOAT           reduce using rule 20 (statement -> forstat .)
    STRING          reduce using rule 20 (statement -> forstat .)
    PRINT           reduce using rule 20 (statement -> forstat .)
    READ            reduce using rule 20 (statement -> forstat .)
    RETURN          reduce using rule 20 (statement -> forstat .)
    IF              reduce using rule 20 (statement -> forstat .)
    FOR             reduce using rule 20 (statement -> forstat .)
    IDENT           reduce using rule 20 (statement -> forstat .)
    RCHAVES         reduce using rule 20 (statement -> forstat .)
    ELSE            reduce using rule 20 (statement -> forstat .)


state 13

    (21) statement -> LCHAVES . statelist RCHAVES
    (45) statelist -> . statement statelist2
    (14) statement -> . vardecl PONTO_VIRGULA
    (15) statement -> . atribstat PONTO_VIRGULA
    (16) statement -> . printstat PONTO_VIRGULA
    (17) statement -> . readstat PONTO_VIRGULA
    (18) statement -> . returnstat PONTO_VIRGULA
    (19) statement -> . ifstat
    (20) statement -> . forstat
    (21) statement -> . LCHAVES statelist RCHAVES
    (22) statement -> . BREAK PONTO_VIRGULA
    (23) statement -> . PONTO_VIRGULA
    (24) vardecl -> . INT IDENT a
    (25) vardecl -> . FLOAT IDENT a
    (26) vardecl -> . STRING IDENT a
    (29) atribstat -> . lvalue ATRIBUICAO atribstat2
    (38) printstat -> . PRINT expression
    (39) readstat -> . READ lvalue
    (40) returnstat -> . RETURN
    (41) ifstat -> . IF LPAREN expression RPAREN statement ifstat2
    (44) forstat -> . FOR LPAREN atribstat PONTO_VIRGULA expression PONTO_VIRGULA atribstat RPAREN statement
    (81) lvalue -> . IDENT c

    LCHAVES         shift and go to state 13
    BREAK           shift and go to state 14
    PONTO_VIRGULA   shift and go to state 6
    INT             shift and go to state 16
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    PRINT           shift and go to state 21
    READ            shift and go to state 22
    RETURN          shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    IDENT           shift and go to state 17

    statelist                      shift and go to state 32
    statement                      shift and go to state 33
    vardecl                        shift and go to state 5
    atribstat                      shift and go to state 7
    printstat                      shift and go to state 8
    readstat                       shift and go to state 9
    returnstat                     shift and go to state 10
    ifstat                         shift and go to state 11
    forstat                        shift and go to state 12
    lvalue                         shift and go to state 20

state 14

    (22) statement -> BREAK . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 34


state 15

    (4) funclist -> funcdef . funclist2
    (5) funclist2 -> . funclist
    (6) funclist2 -> . epsilon
    (4) funclist -> . funcdef funclist2
    (84) epsilon -> .
    (7) funcdef -> . DEF IDENT LPAREN paramlist RPAREN LCHAVES statelist RCHAVES

    $end            reduce using rule 84 (epsilon -> .)
    DEF             shift and go to state 26

    funcdef                        shift and go to state 15
    funclist2                      shift and go to state 35
    funclist                       shift and go to state 36
    epsilon                        shift and go to state 37

state 16

    (24) vardecl -> INT . IDENT a

    IDENT           shift and go to state 38


state 17

    (81) lvalue -> IDENT . c
    (82) c -> . LCOLCHETES numexpression RCOLCHETES c
    (83) c -> . epsilon
    (84) epsilon -> .

    LCOLCHETES      shift and go to state 40
    ATRIBUICAO      reduce using rule 84 (epsilon -> .)
    MULTIPLICACAO   reduce using rule 84 (epsilon -> .)
    DIVISAO         reduce using rule 84 (epsilon -> .)
    RESTO           reduce using rule 84 (epsilon -> .)
    SOMA            reduce using rule 84 (epsilon -> .)
    SUBTRACAO       reduce using rule 84 (epsilon -> .)
    MENOR           reduce using rule 84 (epsilon -> .)
    MAIOR           reduce using rule 84 (epsilon -> .)
    MENORIGUAL      reduce using rule 84 (epsilon -> .)
    MAIORIGUAL      reduce using rule 84 (epsilon -> .)
    IGUAL           reduce using rule 84 (epsilon -> .)
    DIFERENTE       reduce using rule 84 (epsilon -> .)
    PONTO_VIRGULA   reduce using rule 84 (epsilon -> .)
    RCOLCHETES      reduce using rule 84 (epsilon -> .)
    RPAREN          reduce using rule 84 (epsilon -> .)

    c                              shift and go to state 39
    epsilon                        shift and go to state 41

state 18

    (25) vardecl -> FLOAT . IDENT a

    IDENT           shift and go to state 42


state 19

    (26) vardecl -> STRING . IDENT a

    IDENT           shift and go to state 43


state 20

    (29) atribstat -> lvalue . ATRIBUICAO atribstat2

    ATRIBUICAO      shift and go to state 44


state 21

    (38) printstat -> PRINT . expression
    (55) expression -> . numexpression expression2
    (63) numexpression -> . term d
    (67) term -> . unaryexpr b
    (72) unaryexpr -> . SOMA factor
    (73) unaryexpr -> . SUBTRACAO factor
    (74) unaryexpr -> . factor
    (75) factor -> . INT_CONSTANT
    (76) factor -> . FLOAT_CONSTANT
    (77) factor -> . STRING_CONSTANT
    (78) factor -> . NULL
    (79) factor -> . lvalue
    (80) factor -> . LPAREN numexpression RPAREN
    (81) lvalue -> . IDENT c

    SOMA            shift and go to state 49
    SUBTRACAO       shift and go to state 51
    INT_CONSTANT    shift and go to state 52
    FLOAT_CONSTANT  shift and go to state 53
    STRING_CONSTANT shift and go to state 54
    NULL            shift and go to state 55
    LPAREN          shift and go to state 57
    IDENT           shift and go to state 17

    expression                     shift and go to state 45
    numexpression                  shift and go to state 46
    term                           shift and go to state 47
    unaryexpr                      shift and go to state 48
    factor                         shift and go to state 50
    lvalue                         shift and go to state 56

state 22

    (39) readstat -> READ . lvalue
    (81) lvalue -> . IDENT c

    IDENT           shift and go to state 17

    lvalue                         shift and go to state 58

state 23

    (40) returnstat -> RETURN .

    PONTO_VIRGULA   reduce using rule 40 (returnstat -> RETURN .)


state 24

    (41) ifstat -> IF . LPAREN expression RPAREN statement ifstat2

    LPAREN          shift and go to state 59


state 25

    (44) forstat -> FOR . LPAREN atribstat PONTO_VIRGULA expression PONTO_VIRGULA atribstat RPAREN statement

    LPAREN          shift and go to state 60


state 26

    (7) funcdef -> DEF . IDENT LPAREN paramlist RPAREN LCHAVES statelist RCHAVES

    IDENT           shift and go to state 61


state 27

    (14) statement -> vardecl PONTO_VIRGULA .

    $end            reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    LCHAVES         reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    BREAK           reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    PONTO_VIRGULA   reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    INT             reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    FLOAT           reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    STRING          reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    PRINT           reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    READ            reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    RETURN          reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    IF              reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    FOR             reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    IDENT           reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    RCHAVES         reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)
    ELSE            reduce using rule 14 (statement -> vardecl PONTO_VIRGULA .)


state 28

    (15) statement -> atribstat PONTO_VIRGULA .

    $end            reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    LCHAVES         reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    BREAK           reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    PONTO_VIRGULA   reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    INT             reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    FLOAT           reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    STRING          reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    PRINT           reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    READ            reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    RETURN          reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    IF              reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    FOR             reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    IDENT           reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    RCHAVES         reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)
    ELSE            reduce using rule 15 (statement -> atribstat PONTO_VIRGULA .)


state 29

    (16) statement -> printstat PONTO_VIRGULA .

    $end            reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    LCHAVES         reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    BREAK           reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    PONTO_VIRGULA   reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    INT             reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    FLOAT           reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    STRING          reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    PRINT           reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    READ            reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    RETURN          reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    IF              reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    FOR             reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    IDENT           reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    RCHAVES         reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)
    ELSE            reduce using rule 16 (statement -> printstat PONTO_VIRGULA .)


state 30

    (17) statement -> readstat PONTO_VIRGULA .

    $end            reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    LCHAVES         reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    BREAK           reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    PONTO_VIRGULA   reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    INT             reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    FLOAT           reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    STRING          reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    PRINT           reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    READ            reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    RETURN          reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    IF              reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    FOR             reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    IDENT           reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    RCHAVES         reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)
    ELSE            reduce using rule 17 (statement -> readstat PONTO_VIRGULA .)


state 31

    (18) statement -> returnstat PONTO_VIRGULA .
